# CircuitPython_SynthHardware

./: README.rst  picotouch_synth.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
synth_hardware/: __init__.py  picotouch_synth.py
synthhardware/: __init__.py  picotouch_synth.py  qtpy_synth.py
