# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Tod Kurt
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-synthhardware"
description = "Hardware abstraction libraries for todbot synth toys"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Tod Kurt", email = "tod@todbot.com"}
]
urls = {Homepage = "https://github.com/todbot/CircuitPython_SynthHardware"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "synth_hardware",
    "synth",
    "synthio",
    "hardware",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
#py-modules = ["picotouch_synth.py", "qtpy_synth.py"]  # multiple .py is not allowed
packages = ["synth_hardware"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
